<resources>
  <string name="app_name">Showly 2.0</string>
  <string name="menuWatchlist">Watchlist</string>
  <string name="menuDiscover">Discover</string>
  <string name="menuShows">My Shows</string>
  <string name="menuSeeLater">See Later</string>
  <string name="menuArchive">Archive</string>
  <string name="menuPin">Pin to top</string>
  <string name="menuUnpin">Unpin from top</string>
  <string name="tabMyShows">My Shows</string>
  <string name="tabSeeLater">See Later</string>
  <string name="tabStatistics">Statistics</string>
  <string name="tabWatchlist">Watchlist</string>
  <string name="tabArchive">Archived\u0020</string>
  <string name="tabCalendar">Calendar</string>
  <string name="textApply">Apply</string>
  <string name="textOk">OK</string>
  <string name="textNotNow">Not Now</string>
  <string name="textYes">Yes</string>
  <string name="textNo">No</string>
  <string name="textClose">Close</string>
  <string name="textNew">New</string>
  <string name="textHot">Hot</string>
  <string name="textCancel">Cancel</string>
  <string name="textNextEpisode">Next Episode:</string>
  <string name="textSearchFor">Search…</string>
  <string name="textSearchForMyShows">Search…</string>
  <string name="textSearchWatchlist">Search…</string>
  <string name="textAiredAlready">Aired</string>
  <string name="textAirsNow">Airs Now</string>
  <string name="textEmptyResults">There were no results…</string>
  <string name="textSearchInitial1">Find your favorite shows</string>
  <string name="textSearchInitial2">Search powered by Trakt.tv</string>
  <string name="textClear">Clear recent searches</string>
  <string name="textActorRole">%s\n(%s)</string>
  <string name="textActorsEmpty">Actors are not available</string>
  <string name="textYouMayAlsoLike">You may also like:</string>
  <string name="textNewSeason">Season Premiere</string>
  <string name="textSeasons">Seasons:</string>
  <string name="textSeasonsEmpty">Seasons not available.</string>
  <string name="textSeason">Season %1$d</string>
  <string name="textEpisode">Episode %1$d</string>
  <string name="textEpisodeDate">Episode %1$d | %2$s</string>
  <string name="textSeasonEpisodeDate">S.%1$02d E.%2$02d | %3$s</string>
  <string name="textAdd">Add to my shows</string>
  <string name="textTrailer">Trailer</string>
  <string name="textImdb">iMDB</string>
  <string name="textRate">Rate</string>
  <string name="textRateDelete">Remove</string>
  <string name="textTurnOff">Turn Off</string>
  <string name="textSelect">Select</string>
  <string name="textLoadComments">Show Comments</string>
  <string name="textLoadCommentsCount">Show Comments (%d)</string>
  <string name="textComments">Comments:</string>
  <string name="textComments2">Comments</string>
  <string name="textShare">Share</string>
  <string name="textTip">Tip:</string>
  <string name="textNoComments">No comments.</string>
  <string name="textInMyShows">Added to my shows</string>
  <string name="textInSeeLater">Added to see later</string>
  <string name="textInArchive">Archived</string>
  <string name="textNoDescription">Overview not available.</string>
  <string name="textSortBy">Sort by:</string>
  <string name="textSortOrder">Feed:</string>
  <string name="textGenres">Genres:</string>
  <string name="textSortName">Name</string>
  <string name="textSortNewest">Most Recent</string>
  <string name="textSortRated">Top Rated</string>
  <string name="textSortDateAdded">Recently Added</string>
  <string name="textSortRecentlyWatched">Recently Watched</string>
  <string name="textSortEpisodesLeft">Episodes Left</string>
  <string name="textEpisodeInfo">Details</string>
  <string name="textWatchLater">See Later</string>
  <string name="textWatchlistToday">Today</string>
  <string name="textWatchlistTomorrow">Tomorrow</string>
  <string name="textWatchlistThisWeek">This Week</string>
  <string name="textWatchlistNextWeek">Next Week</string>
  <string name="textWatchlistLater">Later</string>
  <string name="textWatchlistIncoming">Coming Soon</string>
  <string name="textWatchlistEmpty">Your <b>Watchlist</b> is currently empty.\n\nVisit <b>Discover</b> tab to add shows or import your Trakt.tv collection.</string>
  <string name="textMyShowsEmpty">Your shows collection is currently empty.\n\nVisit <b>Discover</b> tab to add your first show.</string>
  <string name="textSeeLaterEmpty">Your <b>See Later</b> collection is currently empty.\n\nVisit <b>Discover</b> tab to add shows you might want to see in the future.</string>
  <string name="textArchiveEmpty">Your <b>Archive</b> is currently empty.\n\n<b>Archive</b> is a list of shows that have been dropped, abandoned or you are no longer interested in.\n\nArchived shows will no longer appear in <b>Watchlist</b>, <b>Discover</b> and <b>My Shows</b> sections and will also be skipped during Trakt.tv import.</string>
  <string name="textWhatIsArchive">What\'s Archive?</string>
  <string name="textArchiveDescription"><b>Archive</b> is a list of shows that have been dropped, abandoned or you are no longer interested in.\n\nArchived shows will no longer appear in <b>Watchlist</b>, <b>Discover</b> and <b>My Shows</b> sections and will also be skipped during Trakt.tv import.</string>
  <string name="textCalendarEmpty">There are no new episodes on the way.</string>
  <string name="textStatisticsEmpty">At least one show must be present in <b>My Shows</b>\nbefore statistics can be displayed.</string>
  <string name="textNewEpisodeAvailable">New episode is available now!</string>
  <string name="textNewEpisodeAvailableSoon">New episode will be available soon!</string>
  <string name="textNewSeasonAvailable">New season is available now!</string>
  <string name="textNewSeasonAvailableSoon">New season will be available soon!</string>
  <string name="textTraktLoginSuccess">You\'ve been successfully authorized.</string>
  <string name="textTraktLogoutSuccess">You\'ve been signed out.</string>
  <string name="textSpoilersWarning">This comment contains spoilers.\nTap to read.</string>
  <string name="textRuntimeLeftHours">~%1$dh %2$dm remaining</string>
  <string name="textRuntimeLeftMinutes">~%1$dm remaining</string>
  <string name="textSignBeforeRate">Please sign in before rating a show.</string>
  <string name="textShowRated">Your rating has been saved.</string>
  <string name="textShowRatingDeleted">Your rating has been removed.</string>
  <string name="textShowQuickProgressTitle">Quick Progress</string>
  <string name="textShowQuickProgressSubTitle">Select last seen episode to quickly bring your progress up to date.</string>
  <string name="textShowQuickProgressDone">Your progress has been updated.</string>
  <string name="textDiscoverShows">Discover Shows</string>
  <string name="textDiscoverFilterAnticipated">Hide Anticipated Shows</string>
  <string name="textImagesCacheCleared">Images cache has been cleared.</string>
  <string name="textSettings">Settings</string>
  <string name="textSettingsTrakt">Trakt.tv</string>
  <string name="textSettingsTraktAuthorizeTitle">Trakt.tv Authorization</string>
  <string name="textSettingsTraktAuthorizeSummarySignIn">Click to sign in into your Trakt.tv account.</string>
  <string name="textSettingsTraktAuthorizeSummarySignOut">Signed in. Click to sign out.</string>
  <string name="textSettingsTraktAuthorizeSummarySignOutUser">Signed in as %1$s. Click to sign out.</string>
  <string name="textSettingsTraktSyncTitle">Trakt.tv Sync</string>
  <string name="textSettingsTraktSyncSummary">Sync data between Trakt.tv and Showly.</string>
  <string name="textSettingsTraktQuickSyncTitle">Trakt.tv Instant Upload</string>
  <string name="textSettingsTraktQuickSyncSummary">Instantly upload episodes and See Later shows to Trakt.tv after you add them in the app.</string>
  <string name="textSettingsTraktQuickRemoveTitle">Trakt.tv Instant Remove</string>
  <string name="textSettingsTraktQuickRemoveSummary">Add option to remove show\'s data from Trakt.tv after you remove it in the app.</string>
  <string name="textSettingsGeneral">General &amp; UX</string>
  <string name="textSettingsRecentShowsTitle">Recently Added Amount</string>
  <string name="textSettingsRecentShowsSummary">Number of recent shows to display in \'My Shows\' screen.</string>
  <string name="textSettingsMyShowsSectionsTitle">My Shows Sections</string>
  <string name="textSettingsMyShowsSectionSummary">Enable/disable sections in My Shows tab.</string>
  <string name="textSettingsNotifications">Notifications</string>
  <string name="textSettingsPushNotificationsTitle">Push Notifications</string>
  <string name="textSettingsPushNotificationsSummary">Receive general information push notifications.</string>
  <string name="textSettingsShowsNotificationsTitle">Episodes Announcements</string>
  <string name="textSettingsShowsNotificationsSummary">Receive notifications about new episodes, seasons for shows you are following.</string>
  <string name="textSettingsShowsNotificationsWhenTitle">When To Notify</string>
  <string name="textSettingsShowsNotificationsWhenSummary">When would you like ro receive episodes announcements.</string>
  <string name="textSettingsShowsNotificationsWhenAvailable">When Available</string>
  <string name="textSettingsShowsNotificationsWhen1Hour">1 Hour After</string>
  <string name="textSettingsShowsNotificationsWhen3Hours">3 Hours After</string>
  <string name="textSettingsShowsNotificationsWhen6Hours">6 Hours After</string>
  <string name="textSettingsShowsNotificationsWhen1HourBefore">1 Hour Before</string>
  <string name="textSettingsShowsNotificationsWhen3HoursBefore">3 Hours Before</string>
  <string name="textSettingsShowsNotificationsWhen6HoursBefore">6 Hours Before</string>
  <string name="textSettingsShowsNotificationsWhen12HoursBefore">12 Hours Before</string>
  <string name="textSettingsShowsNotificationsWhen12Hours">12 Hours After</string>
  <string name="textSettingsShowsNotificationsWhenNextDay">1 Day After</string>
  <string name="textSettingsMisc">Misc</string>
  <string name="textSettingsContactDevsTitle">Contact Developers</string>
  <string name="textSettingsContactDevsSummary">Got an issue? Click to send us an email.</string>
  <string name="textSettingsRateAppTitle">Give Feedback</string>
  <string name="textSettingsRateAppSummary">Enjoying Showly? Drop us a review on PlayStore. Thanks!</string>
  <string name="textSettingsDeleteCacheTitle">Clear Images Cache</string>
  <string name="textSettingsDeleteCacheSummary">Click to clear local images cache. This may help if shows images are not being loaded correctly.</string>
  <string name="textSettingsQuickSyncConfirmationTitle">Disable Automatic Sync</string>
  <string name="textSettingsQuickSyncConfirmationMessage">\nIt seems like Automatic Sync is already turned on.\n\nWould you like to turn it off before enabling instant sync (advised)?\n</string>
  <string name="textSettingsLogoutTitle">Trakt.tv Sign Out</string>
  <string name="textSettingsLogoutMessage">\nAre you sure you want to sign out?\n</string>
  <string name="textSettingsScheduleImportConfirmationTitle">Instant Sync Enabled</string>
  <string name="textSettingsScheduleImportConfirmationMessage">\nIt seems like Instant Sync is already turned on.\n\nDo you still want to schedule automatic sync?\n</string>
  <string name="textArchiveConfirmationTitle">Archive Show</string>
  <string name="textArchiveConfirmationMessage">\nAre you sure you want to archive this show?\n</string>
  <string name="textTraktSynchronize">Import from Trakt.tv</string>
  <string name="textTraktSyncLastTimestamp">Last Sync: %s</string>
  <string name="textTraktSync">Trakt.tv Sync</string>
  <string name="textTraktSyncRunning">Running…</string>
  <string name="textTraktSyncStarted">Sync started. It will continue to run in the background.</string>
  <string name="shortcutDiscover">Discover</string>
  <string name="shortcutMyShows">My Shows</string>
  <string name="shortcutWatchlist">Watchlist</string>
</resources>