<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  android:fillViewport="true"
  >

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/settingsToolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:contentInsetStartWithNavigation="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/ic_arrow_back"
      app:title="@string/textSettings"
      />

    <TextView
      android:id="@+id/settingsCategoryTrakt"
      style="@style/Settings.Category"
      android:text="@string/textSettingsTrakt"
      app:layout_constraintBottom_toTopOf="@id/settingsTraktAuthorize"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsToolbar"
      app:layout_constraintVertical_bias="0"
      app:layout_constraintVertical_chainStyle="packed"
      />

    <LinearLayout
      android:id="@+id/settingsTraktAuthorize"
      style="@style/Settings.ItemLayout"
      app:layout_constraintBottom_toTopOf="@id/settingsCategoryGeneral"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsCategoryTrakt"
      >

      <TextView
        style="@style/Settings.Title"
        android:text="@string/textSettingsTraktAuthorizeTitle"
        />

      <TextView
        android:id="@+id/settingsTraktAuthorizeSummary"
        style="@style/Settings.Summary"
        tools:text="@string/textSettingsTraktAuthorizeSummarySignIn"
        />

    </LinearLayout>

    <ImageView
      android:id="@+id/settingsTraktAuthorizeIcon"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginEnd="@dimen/spaceNormal"
      android:tint="@color/colorAccent"
      android:visibility="gone"
      app:srcCompat="@drawable/ic_check"
      app:layout_constraintBottom_toBottomOf="@id/settingsTraktAuthorize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/settingsTraktAuthorize"
      />

    <TextView
      android:id="@+id/settingsCategoryGeneral"
      style="@style/Settings.Category"
      android:text="@string/textSettingsGeneral"
      app:layout_constraintBottom_toTopOf="@id/settingsRecentShowsAmount"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsTraktAuthorize"
      app:layout_constraintVertical_bias="0"
      app:layout_constraintVertical_chainStyle="packed"
      />

    <LinearLayout
      android:id="@+id/settingsRecentShowsAmount"
      style="@style/Settings.ItemLayout"
      app:layout_constraintBottom_toTopOf="@id/settingsCategoryNotifications"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsCategoryGeneral"
      >

      <TextView
        style="@style/Settings.Title"
        android:text="@string/textSettingsRecentShowsTitle"
        />

      <TextView
        style="@style/Settings.Summary"
        android:text="@string/textSettingsRecentShowsSummary"
        />

    </LinearLayout>

    <TextView
      android:id="@+id/settingsCategoryNotifications"
      style="@style/Settings.Category"
      android:text="@string/textSettingsNotifications"
      app:layout_constraintBottom_toTopOf="@id/settingsPushNotifications"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsRecentShowsAmount"
      />

    <LinearLayout
      android:id="@+id/settingsPushNotifications"
      style="@style/Settings.ItemLayout"
      app:layout_constraintBottom_toTopOf="@id/settingsShowsNotifications"
      app:layout_constraintEnd_toStartOf="@id/settingsPushNotificationsSwitch"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsCategoryNotifications"
      >

      <TextView
        style="@style/Settings.Title"
        android:text="@string/textSettingsPushNotificationsTitle"
        />

      <TextView
        style="@style/Settings.Summary"
        android:text="@string/textSettingsPushNotificationsSummary"
        />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsPushNotificationsSwitch"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginEnd="@dimen/spaceNormal"
      android:checked="true"
      app:layout_constraintBottom_toBottomOf="@id/settingsPushNotifications"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/settingsPushNotifications"
      />

    <LinearLayout
      android:id="@+id/settingsShowsNotifications"
      style="@style/Settings.ItemLayout"
      app:layout_constraintBottom_toTopOf="@id/settingsWhenToNotify"
      app:layout_constraintEnd_toStartOf="@id/settingsShowsNotificationsSwitch"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsPushNotifications"
      >

      <TextView
        style="@style/Settings.Title"
        android:text="@string/textSettingsShowsNotificationsTitle"
        />

      <TextView
        style="@style/Settings.Summary"
        android:text="@string/textSettingsShowsNotificationsSummary"
        />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/settingsShowsNotificationsSwitch"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginEnd="@dimen/spaceNormal"
      android:checked="true"
      app:layout_constraintBottom_toBottomOf="@id/settingsShowsNotifications"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/settingsShowsNotifications"
      />

    <LinearLayout
      android:id="@+id/settingsWhenToNotify"
      style="@style/Settings.ItemLayout"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/settingsWhenToNotifyValue"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsShowsNotifications"
      >

      <TextView
        style="@style/Settings.Title"
        android:text="@string/textSettingsShowsNotificationsWhenTitle"
        />

      <TextView
        style="@style/Settings.Summary"
        android:text="@string/textSettingsShowsNotificationsWhenSummary"
        />

    </LinearLayout>

    <TextView
      android:id="@+id/settingsWhenToNotifyValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/spaceNormal"
      android:text="@string/textSettingsShowsNotificationsWhenAvailable"
      android:textColor="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="@id/settingsWhenToNotify"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/settingsWhenToNotify"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
