<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:orientation="vertical"
  >

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spaceTiny"
    android:text="@string/menuWatchlist"
    android:textAllCaps="true"
    android:textColor="@color/colorTextPrimary"
    android:textSize="20sp"
    android:textStyle="bold"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/textWatchlistEmpty"
    android:textColor="@color/colorTextSecondary"
    android:textSize="14sp"
    />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/watchlistEmptyTraktButton"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/spaceNormal"
    android:text="@string/textTraktSynchronize"
    android:textColor="@color/colorWhite"
    app:backgroundTint="@color/colorAccent"
    app:rippleColor="@color/colorWhite"
    app:strokeColor="@color/colorWhite"
    />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/watchlistEmptyDiscoverButton"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/textDiscoverShows"
    android:textColor="@color/colorWhite"
    app:rippleColor="@color/colorWhite"
    />

</LinearLayout>