<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:clipChildren="false"
  android:clipToPadding="false"
  android:orientation="vertical"
  android:padding="@dimen/spaceNormal"
  tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
  >

  <TextView
    android:id="@+id/discoverFiltersSortTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/textSortOrder"
    android:textAllCaps="true"
    android:textColor="@color/colorTextPrimary"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@id/discoverFiltersSortChipGroup"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <com.google.android.material.chip.ChipGroup
    android:id="@+id/discoverFiltersSortChipGroup"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spaceSmall"
    android:layout_marginBottom="@dimen/spaceSmall"
    app:layout_constraintBottom_toTopOf="@id/discoverFiltersGenresTitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/discoverFiltersSortTitle"
    app:selectionRequired="true"
    app:singleSelection="true"
    >

    <com.google.android.material.chip.Chip
      android:id="@+id/discoverFiltersChipHot"
      style="@style/Widget.MaterialComponents.Chip.Choice"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/textHot"
      android:textColor="@color/selector_discover_chip_text"
      app:checkedIconTint="@color/selector_discover_chip_text"
      app:chipBackgroundColor="@color/colorSearchViewBackground"
      app:chipStrokeColor="@color/selector_discover_chip_text"
      app:chipStrokeWidth="1dp"
      />

    <com.google.android.material.chip.Chip
      android:id="@+id/discoverFiltersChipTopRated"
      style="@style/Widget.MaterialComponents.Chip.Choice"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/textSortRated"
      android:textColor="@color/selector_discover_chip_text"
      app:checkedIconTint="@color/selector_discover_chip_text"
      app:chipBackgroundColor="@color/colorSearchViewBackground"
      app:chipStrokeColor="@color/selector_discover_chip_text"
      app:chipStrokeWidth="1dp"
      />

    <com.google.android.material.chip.Chip
      android:id="@+id/discoverFiltersChipMostRecent"
      style="@style/Widget.MaterialComponents.Chip.Choice"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/textSortNewest"
      android:textColor="@color/selector_discover_chip_text"
      app:checkedIconTint="@color/selector_discover_chip_text"
      app:chipBackgroundColor="@color/colorSearchViewBackground"
      app:chipStrokeColor="@color/selector_discover_chip_text"
      app:chipStrokeWidth="1dp"
      />

  </com.google.android.material.chip.ChipGroup>

  <TextView
    android:id="@+id/discoverFiltersGenresTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/textGenres"
    android:textAllCaps="true"
    android:textColor="@color/colorTextPrimary"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@id/discoverFiltersGenresChipGroup"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/discoverFiltersSortChipGroup"
    />

  <com.google.android.material.chip.ChipGroup
    android:id="@+id/discoverFiltersGenresChipGroup"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spaceSmall"
    android:layout_marginBottom="@dimen/spaceSmall"
    app:layout_constraintBottom_toTopOf="@id/discoverFiltersApplyButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/discoverFiltersGenresTitle"
    />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/discoverFiltersApplyButton"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorAccent"
    android:gravity="center"
    android:text="@string/textApply"
    android:textColor="@color/colorWhite"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/discoverFiltersGenresChipGroup"
    app:rippleColor="@color/colorWhite"
    />

</merge>